opam-version: "2.0"
name: "Cs_iit_scraper"
version: "0.0.1"

authors: "My Dinh <mdinh@hawk.iit.edu>"
description: ""
homepage: "https://github.com/b72u68/cs-iit-scraper"

depends: [
"ocaml" {>= "4.12.1"}
"cohttp" {>= "4.0.0"}
"cohttp-lwt" {>= "4.0.0"}
"cohttp-lwt-unix" {>= "4.0.0"}
"cohttp-async" {>= "4.0.0"}
"lambdasoup" {>= "0.7.2"}
"ocamlfind" {>= "1.9.1"}
]

build: [
["ocamlbuild" "-I" "src" "-use-ocamlfind" "cs-iit-scraper.native"]
[make]
]
